app/src/styles/tailwind.css
@tailwind base;

@tailwind components;

@tailwind utilities;


/* Set max-width of site to 1600px */
body {
  @apply max-w-1600;
}

/* Set global padding (mobile 1rem, tablet+ to 3rem) */
header,
main,
footer {
  @apply px-12;
}

@media only screen and (min-width: 768px) {
  header,
  main,
  footer {
    @apply px-48;
  }
}

/* Set base typography font */
h1,
h2,
h3,
h4,
p,
span,
div,
a {
  @apply font-sans;
}

